--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "DEBUG=project-2-happy2help:* nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "dev": " nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
