--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "npm": "^6.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "popper.js": "^1.14.3",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
