--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "dev": " nodemon ./bin/www"
-  },
+  "start": "node ./bin/www",
+  "start-dev": "nodemon ./bin/www"
+},
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
