--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-  "start": "node ./bin/www",
-  "start-dev": "nodemon ./bin/www"
-},
+    "start": "node ./bin/www",
+    "start-dev": "nodemon ./bin/www"
+  },
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
@@ -28,7 +28,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper.js": "^1.14.3",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "video.js": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
